# scrappie

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  LICENSE  Makefile  README.md  RELEASES.md  basecall.c  basecall_gru.c  basecall_lstm.c  decode.c  decode.h  features.c  features.h  gru_model.h  layers.c  layers.h  parse_gru.py  parse_lstm.py  read_events.c  read_events.h  reads.fa  skeleton_gru.py  skeleton_lstm.py  sse_mathfun.h  util.c  util.h
DEBIAN/: control
docker/: Makefile
docker/centos/centos_7_0_1406/: Dockerfile
docker/centos/centos_7_1_1503/: Dockerfile
docker/centos/centos_7_2_1511/: Dockerfile
docker/centos/centos_7_3_1611/: Dockerfile
docker/centos/centos_7_4_1708/: Dockerfile
docker/centos_7_2_1511/: Dockerfile
docker/debian/jessie/: Dockerfile
docker/debian/stretch/: Dockerfile
docker/opensuse/opensuse_42_2/: Dockerfile
docker/opensuse/opensuse_42_3/: Dockerfile
docker/opensuse_42_3/: Dockerfile
docker/ubuntu/ubuntu_14_04/: Dockerfile
docker/ubuntu/ubuntu_16_04/: Dockerfile
docker/ubuntu/ubuntu_17_10/: Dockerfile
docker/ubuntu/ubuntu_18_04/: Dockerfile
docker/ubuntu_14_04/: Dockerfile
docker/ubuntu_16_04/: Dockerfile
include/: scrappie.h
interface/: scrappie.h
misc/: alter_temperature.py  homo.py  homo_correction.py  indent.sh  json_to_tsv.py  parse_events.py  parse_gru_raw.py  parse_lstm.py  parse_lstm_events.py  parse_raw.py  parse_rgr.py  parse_rgrgr.py  parse_rgrgr_resgru.py  parse_rgrgr_reslstm.py  parse_rnnrf.py  parse_squiggle.py  skeleton_gru.py  skeleton_lstm.py
python/: MANIFEST.in  Makefile  README.md  build-wheels.sh  build.py  pyscrap.h  requirements.txt  setup.py
python/scrappie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/scrappy/: __init__.py
python/test/: test_scrappy.py
reads/: MINICOL228_20161012_FNFAB42578_MN17976_mux_scan_HG_52221_ch174_read172_strand.fa  MINICOL228_20161012_FNFAB42578_MN17976_mux_scan_HG_52221_ch271_read66_strand.fa  test_squiggles.fa
src/: basecall.c  decode.c  decode.h  event_detection.c  event_detection.h  events.c  events.h  fast5_interface.c  fast5_interface.h  homopolymer.c  homopolymer.h  layers.c  layers.h  nanonet_lstm_raw.h  nanonet_raw.h  nanonet_raw_stride5.h  networks.c  networks.h  nnfeatures.c  nnfeatures.h  read_events.c  read_events.h  scrappie.c  scrappie.h  scrappie_assert.h  scrappie_common.c  scrappie_common.h  scrappie_event_table.c  scrappie_events.c  scrappie_help.c  scrappie_licence.h  scrappie_mappy.c  scrappie_matrix.c  scrappie_matrix.h  scrappie_raw.c  scrappie_seq_helpers.c  scrappie_seq_helpers.h  scrappie_seqmappy.c  scrappie_squiggle.c  scrappie_stdlib.h  (+7 more)
src/models/: human_r941.h  raw_r94.h  rgr_r94.h  rgrgr_r10.h  rgrgr_r94.h  rgrgr_r941.h  rgrgr_r95.h  rgrgr_resgru.h  rgrgr_reslstm.h  rgrgr_rf14.h  rnnrf_r94.h  squiggle_dna_test.h  squiggle_r10.h  squiggle_r10_20180518_244a3e3.h  squiggle_r94.h  squiggle_r94_20180502_9010ca3.h  squiggle_r94_rna.h  squiggle_rf14.h
src/test/: Makefile  normalised_signal.crp  path.crp  raw_signal.crp  read_crp.c  scrappie_matrix_util.c  scrappie_matrix_util.h  scrappie_test_runner.c  scrappie_util.c  scrappie_util.h  skeleton_rgr.c  test_common.h  test_eventdetection.c  test_map_to_sequence.c  test_scrappie_convolution.c  test_scrappie_decoding.c  test_scrappie_elu.c  test_scrappie_event_detection.c  test_scrappie_matrix.c  test_scrappie_matrix_util.c  test_scrappie_matrix_util.h  test_scrappie_signal.c  test_scrappie_squiggle.c  test_scrappie_util.c  test_skeleton.c  test_util.c  trimmed_signal.crp  write_crp.c  write_random_crp.c
test/: test_conv.c  test_exp.c  test_raw.c  test_window.c
